# AdventOfCode.rs

./: .earthlyignore  .gitattributes  .gitconfig  .sops.yaml  .woodpecker.yaml  Cargo.toml  Earthfile  tabulate-runtimes.awk
.forgejo/workflows/: test.yaml
2022/coord/src/: lib.rs
2022/day01/src/: main.rs
2022/day03/src/: main.rs
2022/day04/src/: main.rs
2022/day06/src/: main.rs
2022/day07/src/: main.rs
2022/day08/src/: main.rs
2022/day09/src/: main.rs
2022/day10/src/: main.rs
2022/day11/src/: main.rs
2022/day12/: Cargo.toml
2022/day12/src/: main.rs
2022/day13/: Cargo.toml
2022/day13/src/: main.rs
2022/day14/: Cargo.toml
2022/day15/: Cargo.toml
2022/day15/src/: main.rs
2022/day16/: Cargo.toml
2022/day16/src/: main.rs
2022/grid/src/: lib.rs
crates/comparable/: Cargo.toml
crates/comparable/src/: lib.rs
crates/coord/: Cargo.toml
crates/coord/src/: lib.rs
crates/dijkstra/: Cargo.toml
crates/dijkstra/src/: lib.rs
crates/direction/: Cargo.toml
crates/direction/src/: lib.rs
crates/grid/: Cargo.toml
crates/grid/src/: lib.rs
crates/intcode/: Cargo.toml
crates/intcode/src/: lib.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/timing/: Cargo.toml
crates/timing/src/: lib.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
runner/: Cargo.toml
runner/src/: main.rs
template/: Cargo.toml  cargo-generate.toml
template/benches/: solutions.rs
template/src/: lib.rs  main.rs
years/2018/01/: Cargo.toml
years/2018/01/src/: main.rs
years/2018/02/: Cargo.toml
years/2018/02/src/: main.rs
years/2018/03/: Cargo.toml
years/2018/03/src/: main.rs
years/2019/01/: Cargo.toml
years/2019/01/src/: main.rs
years/2019/02/: Cargo.toml
years/2019/02/src/: main.rs
years/2019/03/: Cargo.toml
years/2019/03/src/: main.rs
years/2019/04/: Cargo.toml
years/2019/04/src/: main.rs
years/2019/05/: Cargo.toml
years/2019/05/src/: main.rs
years/2019/06/: Cargo.toml
years/2019/06/src/: main.rs
years/2019/07/: Cargo.toml
years/2019/07/src/: main.rs
years/2019/08/: Cargo.toml
years/2019/08/src/: main.rs
years/2019/09/: Cargo.toml
years/2019/09/src/: main.rs
years/2019/10/: Cargo.toml
years/2019/10/src/: main.rs
years/2019/11/: Cargo.toml
years/2019/11/src/: main.rs
years/2019/13/: Cargo.toml
years/2019/13/src/: main.rs
years/2019/15/: Cargo.toml
years/2019/15/src/: main.rs
years/2019/17/: Cargo.toml
years/2019/17/src/: main.rs
years/2019/19/: Cargo.toml
years/2019/19/src/: main.rs
years/2019/21/: Cargo.toml
years/2019/21/src/: main.rs
years/2019/23/: Cargo.toml
years/2019/23/src/: main.rs
years/2022/01/: Cargo.toml
years/2022/01/src/: main.rs
years/2022/02/: Cargo.toml
years/2022/02/src/: main.rs
years/2022/03/: Cargo.toml
years/2022/03/src/: main.rs
years/2022/04/: Cargo.toml
years/2022/04/src/: main.rs
years/2022/05/: Cargo.toml
years/2022/05/src/: main.rs
years/2022/06/: Cargo.toml
years/2022/06/src/: main.rs
years/2022/07/: Cargo.toml
years/2022/07/src/: main.rs
years/2022/08/: Cargo.toml
years/2022/09/: Cargo.toml
years/2022/10/: Cargo.toml
years/2022/11/: Cargo.toml
years/2022/12/: Cargo.toml
years/2022/13/: Cargo.toml
years/2022/14/: Cargo.toml
years/2022/14/src/: main.rs
years/2022/15/: Cargo.toml
years/2022/16/: Cargo.toml
years/2022/17/: Cargo.toml
years/2022/17/src/: main.rs
years/2022/18/: Cargo.toml
years/2022/19/: Cargo.toml
years/2022/19/src/: main.rs
years/2022/19/src/solution/: mod.rs  parser.rs
years/2023/01/: Cargo.toml
years/2023/02/: Cargo.toml
years/2023/03/: Cargo.toml
years/2023/04/: Cargo.toml
years/2023/05/: Cargo.toml
years/2023/06/: Cargo.toml
years/2023/07/: Cargo.toml
years/2023/07/src/: main.rs
years/2023/08/: Cargo.toml
years/2023/09/: Cargo.toml
years/2023/10/: Cargo.toml
years/2023/10/src/: main.rs
years/2023/11/: Cargo.toml
years/2023/12/: Cargo.toml
years/2023/13/: Cargo.toml
years/2023/13/src/: main.rs
years/2023/14/: Cargo.toml
years/2023/14/src/: main.rs
years/2023/15/: Cargo.toml
years/2023/16/: Cargo.toml
years/2023/17/: Cargo.toml
years/2023/17/src/: main.rs
years/2023/18/: Cargo.toml
years/2023/19/: Cargo.toml
years/2023/19/src/: main.rs  parser.rs
years/2023/20/: Cargo.toml
years/2023/20/src/: main.rs
years/2023/21/: Cargo.toml
years/2024/01/: Cargo.toml
years/2024/02/: Cargo.toml
years/2024/03/: Cargo.toml
years/2024/04/: Cargo.toml
years/2024/05/: Cargo.toml  graph.dot
years/2024/06/: Cargo.toml
years/2024/06/src/: main.rs
years/2024/07/: Cargo.toml
years/2024/08/: Cargo.toml
years/2024/09/: Cargo.toml
years/2024/10/: Cargo.toml
years/2024/10/src/: main.rs
years/2024/11/: Cargo.toml
years/2024/12/: Cargo.toml
years/2024/12/src/: main.rs
years/2024/13/: Cargo.toml
years/2024/14/: Cargo.toml
years/2024/15/: Cargo.toml
years/2024/15/src/: main.rs
years/2024/16/: Cargo.toml
years/2024/16/src/: main.rs
years/2024/17/: Cargo.toml
years/2024/18/: Cargo.toml
years/2024/18/src/: main.rs
years/2024/19/: Cargo.toml
years/2024/20/: Cargo.toml
years/2024/21/: Cargo.toml
years/2024/22/: Cargo.toml
years/2024/23/: Cargo.toml
years/2024/23/src/: main.rs
years/2024/24/: Cargo.toml
years/2024/25/: Cargo.toml
years/2025/01/: Cargo.toml
years/2025/02/: Cargo.toml
years/2025/02/benches/: input  solutions.rs
years/2025/02/src/: lib.rs  main.rs
years/2025/03/: Cargo.toml
years/2025/03/benches/: input  solutions.rs
years/2025/03/src/: lib.rs  main.rs
years/2025/04/: Cargo.toml
years/2025/04/benches/: input  solutions.rs
years/2025/04/src/: lib.rs  main.rs
years/2025/05/: Cargo.toml
years/2025/06/: Cargo.toml
years/2025/06/benches/: input  solutions.rs
years/2025/06/src/: lib.rs  main.rs
years/2025/07/: Cargo.toml
years/2025/07/benches/: input  solutions.rs
years/2025/07/src/: lib.rs  main.rs
years/2025/08/: Cargo.toml
years/2025/08/benches/: input  solutions.rs
years/2025/08/src/: lib.rs  main.rs
(+51 files in other folders)
