[workspace]
members = [
  "runner",
  "crates/*",
  "years/*/*",
]
resolver = "2"

[workspace.dependencies]
aoc-macros = { version = "0.1.0", path = "crates/macros" }
aoc-timing = { version = "0.1.0", path = "crates/timing" }
aoc-utils = { version = "0.1.0", path = "crates/utils" }
chrono = { version = "0.4.35", default-features = false }
clap = "4.5.4"
coord = { version = "0.1.0", path = "crates/coord" }
dijkstra = { version = "0.1.0", path = "crates/dijkstra" }
direction = { version = "0.1.0", path = "crates/direction" }
directories = "6"
dotenvy = "0.15"
env_logger = "0.11.6"
fxhash = "0.2.1"
geo = "0.30.0"
grid = { version = "0.1.0", path = "crates/grid" }
indexmap = "2.7.0"
itertools = "0.14.0"
jiff = "0.2.10"
log = "0.4.22"
nom = "8.0.0"
num-integer = "0.1.46"
pom = "3"
quote = "1.0"
ranges = "0.4.0"
rapidhash = "2.0.0"
rayon = "1.10.0"
regex = "1.11.1"
reqwest = "0.12"
string-interner = "0.19.0"
syn = "2.0"
