[workspace]
members = [
    "crates/*",
    "runner",
    "years/*/*",
]
resolver = "2"

[workspace.dependencies]
clap = "4.5.4"
directories = "6"
dotenvy = "0.15"
env_logger = "0.11.6"
fxhash = "0.2.1"
geo = "0.31.0"
indexmap = "2.7.0"
itertools = "0.14.0"
jiff = "0.2.10"
log = "0.4.22"
nom = "8.0.0"
num-integer = "0.1.46"
pom = "3"
quote = "1.0"
ranges = "0.4.0"
rapidhash = "4.0.0"
rayon = "1.10.0"
regex = "1.11.1"
reqwest = "0.12"
string-interner = "0.19.0"
syn = "2.0"

[workspace.dependencies.aoc-macros]
version = "0.1.0"
path = "crates/macros"

[workspace.dependencies.aoc-timing]
version = "0.1.0"
path = "crates/timing"

[workspace.dependencies.aoc-utils]
version = "0.1.0"
path = "crates/utils"

[workspace.dependencies.coord]
version = "0.1.0"
path = "crates/coord"

[workspace.dependencies.dijkstra]
version = "0.1.0"
path = "crates/dijkstra"

[workspace.dependencies.direction]
version = "0.1.0"
path = "crates/direction"

[workspace.dependencies.grid]
version = "0.1.0"
path = "crates/grid"

[profile.samply]
inherits = "release"
debug = true
