[package]
name = "aoc-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "4"
dotenvy = "0.15"
reqwest = { version = "0.11", features = ["blocking", "stream", "cookies"] }
structopt = { version = "0.3", features = ["color"] }
