[package]
name = "aoc-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "6"
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["blocking", "stream", "cookies"] }
clap = { version = "4.5.4", features = ["derive", "color", "env"] }
