[package]
name = "aoc-runner"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = { workspace = true }
dotenvy = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "stream", "cookies"] }
clap = { workspace = true, features = ["derive", "color", "env"] }
