[package]
{% assign current_year = "now" | date: "%Y" -%}
{% assign today = "now" | date: "%d" -%}
{% capture crate %}aoc-{{ year | default: current_year }}-{{ day | default: today }}{% endcapture -%}
name = "{{ crate }}"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-timing = { workspace = true }
env_logger = { workspace = true }

[[bin]]
name = "{{ crate }}"
path = "src/main.rs"

[lib]
name = "{{ crate | snake_case }}"
path = "src/lib.rs"

[[bench]]
name = "solutions"
harness = false

[dev-dependencies]
divan = { workspace = true }
