[package]
name = "aoc-2019-15"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-timing = { workspace = true }
dijkstra.workspace = true
env_logger = { workspace = true }
intcode = { workspace = true }
itertools.workspace = true
