[package]
name = "aoc-2019-17"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-timing = { version = "0.1.0", path = "../../../crates/timing" }
env_logger = "0.11.0"
grid.workspace = true
intcode = { version = "0.1.0", path = "../../../crates/intcode" }
itertools.workspace = true
regex.workspace = true
