[package]
name = "aoc-2022-14"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-timing = { version = "0.1.0", path = "../../../crates/timing" }
coord = { version = "0.1.0", path = "../../../crates/coord" }
env_logger = "0.11.1"
