[package]
name = "aoc-2022-17"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coord = { version = "0.1.0", path = "../../../crates/coord" }
log = "0.4"
env_logger = "0.10"
aoc-timing = { version = "0.1.0", path = "../../../crates/timing" }
