[package]
name = "aoc-2022-19"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
env_logger = { workspace = true }
aoc-macros = { workspace = true }
aoc-utils = { workspace = true }
aoc-timing = { workspace = true }
nom = { workspace = true }
fxhash = { workspace = true }
