[package]
name = "aoc-2023-10"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-timing = { version = "0.1.0", path = "../../../crates/timing" }
env_logger = "0.10.2"
grid = { version = "0.1.0", path = "../../../crates/grid" }
itertools = "0.12.0"
