[package]
name = "aoc-2023-13"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-timing = { version = "0.1.0", path = "../../../crates/timing" }
aoc-utils = { version = "0.1.0", path = "../../../crates/utils" }
env_logger = "0.11.3"
grid = { version = "0.1.0", path = "../../../crates/grid" }
