[package]
name = "aoc-2023-14"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-timing = { version = "0.1.0", path = "../../../crates/timing" }
env_logger = "0.11.2"
grid = { version = "0.1.0", path = "../../../crates/grid" }
log = "0.4.20"
