[package]
name = "aoc-2023-19"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-timing = { version = "0.1.0", path = "../../../crates/timing" }
env_logger = "0.10.2"
nom = "7.1.3"
ranges = "0.3.3"
