[package]
name = "aoc-2023-20"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-timing = { version = "0.1.0", path = "../../../crates/timing" }
env_logger = "0.11.6"
log = "0.4.22"
rapidhash = "1.3.0"
string-interner = "0.18.0"
