[package]
name = "aoc-2024-06"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-timing = { workspace = true }
env_logger = { workspace = true }
grid = { workspace = true }
rayon = { workspace = true }
