[package]
name = "aoc-2024-12"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-timing = { version = "0.1.0", path = "../../../crates/timing" }
env_logger = "0.11.0"
fxhash = "0.2.1"
grid = { version = "0.1.0", path = "../../../crates/grid" }
rayon = "1.10.0"
