[package]
name = "aoc-2024-15"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-timing = { version = "0.1.0", path = "../../../crates/timing" }
env_logger = "0.11.0"
grid = { version = "0.1.0", path = "../../../crates/grid" }
indexmap = "2.7.0"
itertools = "0.14.0"
log = "0.4.22"
