[package]
name = "aoc-2024-16"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-timing = { version = "0.1.0", path = "../../../crates/timing" }
dijkstra = { version = "0.1.0", path = "../../../crates/dijkstra" }
direction = { version = "0.1.0", path = "../../../crates/direction" }
env_logger = "0.11.0"
grid = { version = "0.1.0", path = "../../../crates/grid" }
