[package]
name = "aoc-2024-18"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-timing = { version = "0.1.0", path = "../../../crates/timing" }
dijkstra = { version = "0.1.0", path = "../../../crates/dijkstra" }
env_logger = "0.11.0"
grid = { version = "0.1.0", path = "../../../crates/grid" }
itertools = "0.14.0"
