[package]
name = "aoc-2025-02"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-timing = { workspace = true }
env_logger = { workspace = true }
itertools.workspace = true

[dev-dependencies]
divan.workspace = true

[[bin]]
name = "aoc-2025-02"
path = "src/main.rs"

[lib]
name = "aoc_2025_02"
path = "src/lib.rs"

[[bench]]
name = "solutions"
harness = false
