[package]
name = "aoc-2025-04"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "aoc-2025-04"
path = "src/main.rs"

[lib]
name = "aoc_2025_04"
path = "src/lib.rs"

[[bench]]
name = "solutions"
harness = false

[dependencies]
aoc-timing = { workspace = true }
env_logger = { workspace = true }
grid.workspace = true
rapidhash.workspace = true

[dev-dependencies]
divan.workspace = true
